
2022-12-01  Simon Sobisch <simonsobisch@gnu.org>

	* bootstrap: drop tarstamp.h generation, done via make
	* config.guess, config.sub: updated to recent versions from
	  git.savannah.gnu.org/gitweb/?p=config.git

2022-06-30  Simon Sobisch <simonsobisch@gnu.org>

	* config.guess, config.rpath, install-sh, mkinstalldirs, texinfo.tex:
	  updated to recent versions from
	  git.savannah.gnu.org/gitweb/?p=config.git

2022-05-30  Simon Sobisch <simonsobisch@gnu.org>

	* create_mingw_bindist.sh: explicit call cobc.exe in the generated
	  set_env.cmd to allowwrapper scripts cobc.cmd/cobc.bat to call it;
	  add (untested) option to use this in MSYS2 builds

2022-03-29  Simon Sobisch <simonsobisch@gnu.org>

	* bootstrap: add "install" option to override all components

2022-01-07  Simon Sobisch <simonsobisch@gnu.org>

	* config.sub, config.guess: updated to recent versions from
	  git.savannah.gnu.org/gitweb/?p=config.git to solve build issues
	  on different machines

2021-10-11  Simon Sobisch <simonsobisch@gnu.org>

	* ar-lib: added from
	  https://git.savannah.gnu.org/cgit/gnulib.git/tree/build-aux/

2020-11-12  Simon Sobisch <simonsobisch@gnu.org>

	* pre-inst-env.in: added prefix

2020-11-11  Simon Sobisch <simonsobisch@gnu.org>

	* create_win_dist.sh: removed obsolete defaults.h
	* pre-inst-env.in: exec_prefix as exec_prefix

2020-10-28  Simon Sobisch <simonsobisch@gnu.org>

	* create_mingw_bindist.sh: completely revised, now also copying
	  locales, usable from makefile, generating correct version info
	  into generated docs + set_env.cmd, set_env.cmd with "drop exe"
	  and double-click functionality, creating two output folders
	  (dbg and stripped)

2020-10-26  Simon Sobisch <simonsobisch@gnu.org>

	* pre-inst-env.in: prefix instead of overwriting COB_CFLAGS,
	  COB_LDFLAGS, COB_LIBS

2020-06-11  Simon Sobisch <simonsobisch@gnu.org>

	* compile, config.guess, config.sub, texinfo.tex:
	  updated to recent version from